# HXCache

./: CMakeLists.txt  README.md
examples/: CacheTest.cpp
include/HXCache/: LFUCache.hpp  LRUCache.hpp
